force-app/main/default/objects/Refund_Line_Item__c/Refund_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Refund Line Item</label>
    <nameField>
        <displayFormat>RIF-{0000}</displayFormat>
        <label>Refund  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refund Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>