force-app/main/default/objects/Refund_Line_Item__c/fields/Receipt__c.field-meta.xml
<CustomField>
    <fullName>Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receipt</label>
    <referenceTo>Receipt__c</referenceTo>
    <relationshipLabel>Refund Line Items</relationshipLabel>
    <relationshipName>Refund_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>