force-app/main/default/objects/Refund_Line_Item__c/fields/Refund__c.field-meta.xml
<CustomField>
    <fullName>Refund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Refund</label>
    <referenceTo>Refund</referenceTo>
    <relationshipLabel>Refund Line Items</relationshipLabel>
    <relationshipName>Refund_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>