force-app/main/default/objects/Refund_Line_Item__c/fields/Refund_Amount__c.field-meta.xml
<CustomField>
    <fullName>Refund_Amount__c</fullName>
    <label>Refund Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>